Add kernel version from OSADL QA Farm
https://www.osadl.org/Profile-of-system-in-rack-7-slot-8.qa-profile-r7s8.0.html

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "linux"]
 	path = linux
 	url = https://github.com/beagleboard/linux.git
+[submodule "linux-osadl-qa-farm"]
+	path = linux-osadl-qa-farm
+	url = https://github.com/wentasah/linux-beagleboard.git
